[package]
name = "private-key-manager"
version = "0.1.0"
edition = "2021"
description = "Private Key Manager to convert base58 to private keys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
bs58 = "0.4.0"
borsh = "0.10.3"
solana-sdk = "1.15.2"
solana-client = "1.15.2"
solana-program = "1.15.2"